--- a/My Profile tier 1/author-profile.html
+++ b/My Profile tier 1/author-profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astegni - Author Profile </title>
+    <title>Astegni - Author-Profile </title>
     <link rel="stylesheet" href="../css/institute.css">
     <link rel="stylesheet" href="../css/main.css">
     <style>
