--- a/My Profile tier 1/bookstore-profile.html
+++ b/My Profile tier 1/bookstore-profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astegni - Bookstore Profile </title>
+    <title>Astegni - Bookstore-Profile </title>
     <link rel="stylesheet" href="../css/institute.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/bookstore.css">
@@ -307,6 +307,11 @@
                     <span class="sidebar-btn-icon">🎤</span>
                     <span>Reading Events</span>
                     <span class="sidebar-badge">8</span>
+                </button>
+                <button class="sidebar-btn" data-content="Ads">
+                    <span class="sidebar-btn-icon">🎁</span>
+                    <span>My Ads</span>
+                    <span class="sidebar-badge active">Active</span>
                 </button>
                 <button class="sidebar-btn" data-content="promotions">
                     <span class="sidebar-btn-icon">🎁</span>
