--- a/My Profile tier 1/parent-profile.html
+++ b/My Profile tier 1/parent-profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astegni - Parent Profile</title>
+    <title>Astegni - Parent-Profile</title>
     <link rel="stylesheet" href="../css/institute.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/parent-profile.css">
@@ -291,18 +291,31 @@
                     <span class="sidebar-btn-icon">👨‍🏫</span>
                     <span>Tutor My Child</span>
                 </button>
-                <button class="sidebar-btn" data-content="educational-resources">
-                    <span class="sidebar-btn-icon">📖</span>
-                    <span>Educational Resources</span>
+                                <button class="sidebar-btn" data-content="schedule">
+                    <span class="sidebar-btn-icon">📅</span>
+                    <span>Schedule</span>
+                    <span class="sidebar-badge">2</span>
+                </button>
+                                <button class="sidebar-btn" data-content="parent-engagement">
+                    <span class="sidebar-btn-icon">📈</span>
+                    <span>Engagement</span>
+                </button>
+                </div>
+                <div class="sidebar-section" data-content="resources">
+                <button class="sidebar-btn" data-content="resources">
+                    <span class="sidebar-btn-icon">📚</span>
+                    <span>My Resources</span>
+                    <span class="sidebar-badge">5</span>
                 </button>
                 <button class="sidebar-btn" data-content="blog">
                     <span class="sidebar-btn-icon">📝</span>
                     <span>Blog</span>
                     <span class="sidebar-badge">7</span>
-                </button>
-                <button class="sidebar-btn" data-content="parent-engagement">
-                    <span class="sidebar-btn-icon">📈</span>
-                    <span>Engagement</span>
+                </button>                
+                <button class="sidebar-btn" data-content="clubs">
+                    <span class="sidebar-btn-icon">🎭</span>
+                    <span>Clubs</span>
+                    <span class="sidebar-badge active">Active</span>
                 </button>
                 <button class="sidebar-btn" data-content="ratings-and-reviews">
                     <span class="sidebar-btn-icon">⭐</span>
@@ -318,25 +331,12 @@
                 </button>
             </div>
 
-            <!-- UNCHANGED EDUCATION SECTION -->
-            <div class="sidebar-section" data-content="education">
-                <button class="sidebar-btn" data-content="Resources">
-                    <span class="sidebar-btn-icon">📚</span>
-                    <span>My Resources</span>
-                    <span class="sidebar-badge">5</span>
-                </button>
-            </div>
             <!-- UNCHANGED PERMANENT SECTION -->
             <div class="sidebar-section" data-content="permanent">
 
-                <button class="sidebar-btn" data-content="clubs">
-                    <span class="sidebar-btn-icon">🎭</span>
-                    <span>Clubs</span>
-                    <span class="sidebar-badge active">Active</span>
-                </button>
-                <button class="sidebar-btn" data-content="my-products">
+                <button class="sidebar-btn" data-content="my-purchases">
                     <span class="sidebar-btn-icon">📦</span>
-                    <span>My Products</span>
+                    <span>My Purchases</span>
                 </button>
                 <a href='../Plug-ins/notes.html'>
                     <button class="sidebar-btn" data-content="notes">
@@ -344,11 +344,6 @@
                         <span>Notes</span>
                     </button>
                 </a>
-
-                <button class="sidebar-btn" data-content="share">
-                    <span class="sidebar-btn-icon">🔗</span>
-                    <span>Share</span>
-                </button>
                 <button class="sidebar-btn" data-content="settings">
                     <span class="sidebar-btn-icon">⚙️</span>
                     <span>Settings</span>
