--- a/My Profile tier 1/student-profile.html
+++ b/My Profile tier 1/student-profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Student Profile | Astegni</title>
+    <title>Astegni Student-Profile</title>
     <link rel="stylesheet" href="../css/institute.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -287,21 +287,21 @@
                 </button>
                 <button class="sidebar-btn" data-content="my-courses">
                     <span class="sidebar-btn-icon">📚</span>
-                    <span>My Courses</span>
+                    <span>Courses</span>
                     <span class="sidebar-badge">6</span>
                 </button>
                 <button class="sidebar-btn" data-content="my-tutors">
                     <span class="sidebar-btn-icon">👨‍🏫</span>
-                    <span>My Tutors</span>
+                    <span>Tutors</span>
                     <span class="sidebar-badge">3</span>
                 </button>
                 <button class="sidebar-btn" data-content="schedule">
                     <span class="sidebar-btn-icon">📅</span>
-                    <span>My Schedule</span>
+                    <span>Schedule</span>
                 </button>
                 <button class="sidebar-btn" data-content="learning-resources">
                     <span class="sidebar-btn-icon">📖</span>
-                    <span>Learning Resources</span>
+                    <span>Resources</span>
                 </button>
                 <button class="sidebar-btn" data-content="grades">
                     <span class="sidebar-btn-icon">🎓</span>
@@ -314,7 +314,7 @@
                 </button>
                 <button class="sidebar-btn" data-content="my-requests">
                     <span class="sidebar-btn-icon">📋</span>
-                    <span>My Requests</span>
+                    <span>Requests</span>
                 </button>
                 <button class="sidebar-btn" data-content="clubs">
                     <span class="sidebar-btn-icon">🎭</span>
@@ -505,7 +505,7 @@
 
                         <div class="location-info">
                             <span class="location-icon">📍</span>
-                            <span id="locationText">New York, NY | XYZ High School - 12th Grade</span>
+                            <span id="locationText">Addis Ababa, Ethiopia | XYZ High School - 12th Grade</span>
                         </div>
 
                         <div class="profile-quote" id="profileQuote">
