--- a/View profile tier 1/view-delivery.html
+++ b/View profile tier 1/view-delivery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Delivery Professional | Astegni</title>
+    <title>Astegni view-delivery</title>
     <link rel="stylesheet" href="../css/institute.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -312,15 +312,15 @@
                     <span class="sidebar-btn-icon">💵</span>
                     <span>Rates & Pricing</span>
                 </button>
-                <button class="sidebar-btn" data-content="service-availability">
-                    <span class="sidebar-btn-icon">📅</span>
-                    <span>Service Areas & Schedule</span>
-                </button>
 
                 <button class="sidebar-btn" data-content="customer-ratings-reviews">
                     <span class="sidebar-btn-icon">⭐</span>
                     <span>Ratings and Reviews</span>
                     <span class="sidebar-badge">4.7</span>
+                </button>
+                <button class="sidebar-btn" data-content="share">
+                    <span class="sidebar-btn-icon">🔗</span>
+                    <span>Share</span>
                 </button>
                 <button class="sidebar-btn" data-content="report">
                     <span class="sidebar-btn-icon">🚩</span>
@@ -371,10 +371,6 @@
                         <span>Notes</span>
                     </button>
                 </a>
-                <button class="sidebar-btn" data-content="share">
-                    <span class="sidebar-btn-icon">🔗</span>
-                    <span>Share</span>
-                </button>
                 <button class="sidebar-btn" data-content="settings">
                     <span class="sidebar-btn-icon">⚙️</span>
                     <span>Settings</span>
@@ -859,85 +855,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Service Areas & Availability Content -->
-                <div class="sidebar-content-panel" id="service-availability-content">
-                    <div class="section-header">
-                        <h2 class="section-title">🗺️ Service Areas & Schedule</h2>
-                    </div>
-
-                    <div class="service-areas-section">
-                        <h3>Service Coverage Map</h3>
-                        <div class="map-placeholder"
-                            style="height: 400px; background: #f0f0f0; display: flex; align-items: center; justify-content: center; border-radius: 10px;">
-                            <p>Interactive Map - Service Areas</p>
-                        </div>
-
-                        <div class="areas-list">
-                            <h3>Primary Service Areas</h3>
-                            <div class="area-cards">
-                                <div class="area-card">
-                                    <h4>Bole</h4>
-                                    <p>Full coverage - Same day delivery available</p>
-                                </div>
-                                <div class="area-card">
-                                    <h4>Piassa & Merkato</h4>
-                                    <p>Selected areas - 1-2 hour delivery</p>
-                                </div>
-                                <div class="area-card">
-                                    <h4>Kolfe & Yeka</h4>
-                                    <p>Limited coverage - Schedule in advance</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="availability-section" style="margin-top: 40px;">
-                        <h3>Weekly Availability</h3>
-                        <div class="schedule-grid">
-                            <div class="schedule-day available">
-                                <h4>Monday</h4>
-                                <p>9 AM - 6 PM</p>
-                                <span class="slots">5 slots available</span>
-                            </div>
-                            <div class="schedule-day available">
-                                <h4>Tuesday</h4>
-                                <p>9 AM - 6 PM</p>
-                                <span class="slots">3 slots available</span>
-                            </div>
-                            <div class="schedule-day available">
-                                <h4>Wednesday</h4>
-                                <p>10 AM - 5 PM</p>
-                                <span class="slots">7 slots available</span>
-                            </div>
-                            <div class="schedule-day busy">
-                                <h4>Thursday</h4>
-                                <p>9 AM - 6 PM</p>
-                                <span class="slots">Fully booked</span>
-                            </div>
-                            <div class="schedule-day available">
-                                <h4>Friday</h4>
-                                <p>9 AM - 7 PM</p>
-                                <span class="slots">4 slots available</span>
-                            </div>
-                            <div class="schedule-day available">
-                                <h4>Saturday</h4>
-                                <p>10 AM - 4 PM</p>
-                                <span class="slots">6 slots available</span>
-                            </div>
-                            <div class="schedule-day unavailable">
-                                <h4>Sunday</h4>
-                                <p>Closed</p>
-                                <span class="slots">Not available</span>
-                            </div>
-                        </div>
-
-                        <div class="booking-section" style="margin-top: 20px;">
-                            <h3>Quick Booking</h3>
-                            <button class="btn-primary" onclick="openBookingModal()">Book a Delivery Slot</button>
-                        </div>
-                    </div>
-                </div>
-
+               
                 <!-- Delivery Rates Content -->
                 <div class="sidebar-content-panel" id="delivery-rates-content">
                     <div class="section-header">
@@ -1083,7 +1001,7 @@
                             <div class="professional-info">
                                 <h3>Jane Smith</h3>
                                 <div class="professional-rating">⭐ 4.8 (234 reviews)</div>
-                                <p class="professional-location">📍 Brooklyn Area</p>
+                                <p class="professional-location">📍 Megenagna/p>
                                 <p class="professional-specialty">Specializes in fragile items</p>
                                 <div class="professional-stats">
                                     <span>📦 3.2K deliveries</span>
@@ -1098,7 +1016,7 @@
                             <div class="professional-info">
                                 <h3>Mike Johnson</h3>
                                 <div class="professional-rating">⭐ 4.6 (189 reviews)</div>
-                                <p class="professional-location">📍 Manhattan</p>
+                                <p class="professional-location">📍 Piyassa</p>
                                 <p class="professional-specialty">Express delivery expert</p>
                                 <div class="professional-stats">
                                     <span>📦 2.8K deliveries</span>
@@ -1113,7 +1031,7 @@
                             <div class="professional-info">
                                 <h3>Sarah Lee</h3>
                                 <div class="professional-rating">⭐ 4.9 (412 reviews)</div>
-                                <p class="professional-location">📍 Queens</p>
+                                <p class="professional-location">📍 22</p>
                                 <p class="professional-specialty">Business deliveries</p>
                                 <div class="professional-stats">
                                     <span>📦 5.1K deliveries</span>
@@ -1128,7 +1046,7 @@
                             <div class="professional-info">
                                 <h3>David Chen</h3>
                                 <div class="professional-rating">⭐ 4.7 (156 reviews)</div>
-                                <p class="professional-location">📍 Bronx</p>
+                                <p class="professional-location">📍 Hayat</p>
                                 <p class="professional-specialty">Medical supplies</p>
                                 <div class="professional-stats">
                                     <span>📦 1.9K deliveries</span>
