--- a/View profile tier 1/view-student.html
+++ b/View profile tier 1/view-student.html
@@ -95,6 +95,14 @@
                     <span>Blog</span>
                     <span class="sidebar-badge">7</span>
                 </button>
+                <button class="sidebar-btn" data-content="parent-preferences">
+                    <span class="sidebar-btn-icon">⚙️</span>
+                    <span>Parent Preferences</span>
+                </button>
+                <button class="sidebar-btn" data-content="payment-history">
+                    <span class="sidebar-btn-icon">💳</span>
+                    <span>Payment History</span>
+                </button>
                 <button class="sidebar-btn" data-content="ratings-reviews">
                     <span class="sidebar-btn-icon">⭐</span>
                     <span>Reviews & Ratings</span>
@@ -119,10 +127,6 @@
                         <span>Notes</span>
                     </button>
                 </a>
-                <button class="sidebar-btn" data-content="share">
-                    <span class="sidebar-btn-icon">🔗</span>
-                    <span>Share</span>
-                </button>
                 <button class="sidebar-btn" data-content="settings">
                     <span class="sidebar-btn-icon">⚙️</span>
                     <span>Settings</span>
