--- a/My Profile tier 1/delivery-profile.html
+++ b/My Profile tier 1/delivery-profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Delivery Professional Profile | Astegni</title>
+    <title> Astegni Delivery-Profile</title>
     <link rel="stylesheet" href="../css/institute.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -281,30 +281,45 @@
 
             <!-- NEW DELIVERY SECTION -->
             <div class="sidebar-section" data-content="deliver">
-                <button class="sidebar-btn" data-content="active-delivery">
-                    <span class="sidebar-btn-icon">📦</span>
-                    <span>Active Delivery</span>
-                    <span class="sidebar-badge live">Live</span>
-                </button>
-                <button class="sidebar-btn" data-content="delivery-history">
-                    <span class="sidebar-btn-icon">📋</span>
-                    <span>Delivery History</span>
-                    <span class="sidebar-badge">234</span>
-                </button>
-                <button class="sidebar-btn" data-content="customers">
-                    <span class="sidebar-btn-icon">👥</span>
-                    <span>Customers</span>
-                    <span class="sidebar-badge">156</span>
+                <button class="sidebar-btn" data-content="ai-insights">
+                    <span class="sidebar-btn-icon">🧠</span>
+                    <span>AI Insights</span>
+                    <span class="sidebar-badge">New</span>
                 </button>
                 <button class="sidebar-btn" data-content="my-location">
                     <span class="sidebar-btn-icon">📍</span>
                     <span>My Location</span>
                     <span class="sidebar-badge live">Live</span>
                 </button>
+                <button class="sidebar-btn" data-content="active-delivery">
+                    <span class="sidebar-btn-icon">📦</span>
+                    <span>Active Delivery</span>
+                    <span class="sidebar-badge live">Live</span>
+                </button>
                 <button class="sidebar-btn" data-content="saved-routes">
                     <span class="sidebar-btn-icon">🗺️</span>
                     <span>Saved Routes</span>
                     <span class="sidebar-badge">28</span>
+                </button>
+
+                <button class="sidebar-btn" data-content="delivery-history">
+                    <span class="sidebar-btn-icon">📋</span>
+                    <span>Delivery History</span>
+                    <span class="sidebar-badge">234</span>
+                </button>
+                <button class="sidebar-btn" data-content="delivery-schedule">
+                    <span class="sidebar-btn-icon">📅</span>
+                    <span>Schedule</span>
+                </button>
+                <button class="sidebar-btn" data-content="calls">
+                    <span class="sidebar-btn-icon">📞</span>
+                    <span>Calls</span>
+                    <span class="sidebar-badge">23</span>
+                </button>
+                <button class="sidebar-btn" data-content="customers">
+                    <span class="sidebar-btn-icon">👥</span>
+                    <span>Customers</span>
+                    <span class="sidebar-badge">156</span>
                 </button>
                 <button class="sidebar-btn" data-content="ratings-reviews">
                     <span class="sidebar-btn-icon">⭐</span>
@@ -314,18 +329,6 @@
                 <button class="sidebar-btn" data-content="earnings">
                     <span class="sidebar-btn-icon">💰</span>
                     <span>Earnings</span>
-                </button>
-                <button class="sidebar-btn" data-content="delivery-schedule">
-                    <span class="sidebar-btn-icon">📅</span>
-                    <span>Schedule</span>
-                </button>
-            </div>
-
-            <div class="sidebar-section" data-content="store">
-                <button class="sidebar-btn" data-content="ai-insights">
-                    <span class="sidebar-btn-icon">🧠</span>
-                    <span>AI Insights</span>
-                    <span class="sidebar-badge">New</span>
                 </button>
             </div>
 
@@ -374,18 +377,19 @@
                     <span class="sidebar-btn-icon">🖼️</span>
                     <span>Image Library</span>
                 </button>
-                <button class="sidebar-btn" data-content="my-products">
+            </div>
+            <div class="sidebar-divider"></div>
+            <div class="sidebar-section" data-content="my-actions">
+                <button class="sidebar-btn" data-content="my-purchases">
                     <span class="sidebar-btn-icon">📦</span>
-                    <span>My Products</span>
+                    <span>My Purchases</span>
                 </button>
-
                 <a href='../Plug-ins/notes.html'>
                     <button class="sidebar-btn" data-content="notes">
                         <span class="sidebar-btn-icon">📝</span>
                         <span>Notes</span>
                     </button>
                 </a>
-
                 <button class="sidebar-btn" data-content="share">
                     <span class="sidebar-btn-icon">🔗</span>
                     <span>Share</span>
@@ -512,7 +516,7 @@
 
                         <div class="location-info">
                             <span class="location-icon">📍</span>
-                            <span id="locationText">New York, NY | Delivery Professional</span>
+                            <span id="locationText">Addis Ababa, Ethiopia | Delivery Professional</span>
                         </div>
 
                         <div class="profile-quote" id="profileQuote">
@@ -879,22 +883,22 @@
                     <div class="earnings-summary">
                         <div class="earnings-card">
                             <h3>Today's Earnings</h3>
-                            <p class="earnings-amount">$156</p>
+                            <p class="earnings-amount">156 ETB</p>
                             <span class="earnings-detail">12 deliveries</span>
                         </div>
                         <div class="earnings-card">
                             <h3>This Week</h3>
-                            <p class="earnings-amount">$892</p>
+                            <p class="earnings-amount">892 ETB</p>
                             <span class="earnings-detail">67 deliveries</span>
                         </div>
                         <div class="earnings-card">
                             <h3>This Month</h3>
-                            <p class="earnings-amount">$2,456</p>
+                            <p class="earnings-amount">2,456 ETB</p>
                             <span class="earnings-detail">234 deliveries</span>
                         </div>
                         <div class="earnings-card">
                             <h3>Available Balance</h3>
-                            <p class="earnings-amount">$1,234</p>
+                            <p class="earnings-amount">1,234 ETB</p>
                             <button class="btn-small" onclick="withdrawEarnings()">Withdraw</button>
                         </div>
                     </div>
@@ -1471,7 +1475,7 @@
     </footer>
 
     <!-- Scripts -->
-     
+
     <script>
         // Modal Functions
         function openCoverUploadModal() {
@@ -1773,7 +1777,7 @@
             });
         });
 
-   
+
     </script>
     <script src="../js/institute-profile-1.js"></script>
     <script src="../js/institute-profile-2.js"></script>
