--- a/My Profile tier 1/tutor-profile.html
+++ b/My Profile tier 1/tutor-profile.html
@@ -290,7 +290,11 @@
                 <span class="sidebar-btn-icon">🗓️</span>
                 <span>My Schedule</span>
             </button>
-
+           <button class="sidebar-btn" data-content="Resources">
+                <span class="sidebar-btn-icon">📚</span>
+                <span>My Resources</span>
+                <span class="sidebar-badge">5</span>
+            </button>
             <!-- Manage Certifications -->
             <button class="sidebar-btn" data-content="manage-certifications">
                 <span class="sidebar-btn-icon">🎓</span>
@@ -349,26 +353,7 @@
                 <span class="sidebar-badge">15</span>
             </button>
         </div>
-
-        <!-- Education Section (UNCHANGED) -->
-        <div class="sidebar-section" data-content="education">
-            <button class="sidebar-btn" data-content="jobs">
-                <span class="sidebar-btn-icon">💼</span>
-                <span>My Job Board</span>
-                <span class="sidebar-badge">3</span>
-            </button>
-            <button class="sidebar-btn" data-content="classes">
-                <span class="sidebar-btn-icon">🎓</span>
-                <span>My Classes</span>
-                <span class="sidebar-badge">5</span>
-            </button>
-            <button class="sidebar-btn" data-content="Resources">
-                <span class="sidebar-btn-icon">📚</span>
-                <span>My Resources</span>
-                <span class="sidebar-badge">5</span>
-            </button>
-        </div>
-
+<div class="sidebar-divider"></div>
         <!-- Permanent Section (UNCHANGED) -->
         <div class="sidebar-section" data-content="permanent">
             <button class="sidebar-btn" data-content="clubs">
@@ -396,10 +381,11 @@
                 <span>Blog</span>
                 <span class="sidebar-badge">7</span>
             </button>
-
-            <button class="sidebar-btn" data-content="my-products">
+</div>
+        <div class="sidebar-section" data-content="my-actions"> 
+            <button class="sidebar-btn" data-content="my-purchases">
                 <span class="sidebar-btn-icon">📦</span>
-                <span>My Products</span>
+                <span>My Purchases</span>
             </button>
             <a href='../Plug-ins/notes.html'>
                 <button class="sidebar-btn" data-content="notes">
@@ -407,10 +393,6 @@
                     <span>Notes</span>
                 </button>
             </a>
-            <button class="sidebar-btn" data-content="share">
-                <span class="sidebar-btn-icon">🔗</span>
-                <span>Share</span>
-            </button>
             <button class="sidebar-btn" data-content="settings">
                 <span class="sidebar-btn-icon">⚙️</span>
                 <span>Settings</span>
